--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "andresakle",
-    "repositoryName": "andresakle.hubpress.io",
+    "repositoryName": "andresakle.github.io",
     "branch": "master"
   },
   "theme": {
